--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -80,22 +80,21 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
-## Research Questions March 2025
+## Research Questions April 2025
 
-**Principle question:** How can pedagogies to support CGD&P be enriched using socio-cultural approaches (CHAT more specifically)?
+- **Primary research question (RQP):** How can understandings of how to design and facilitate CGD&P be enriched using socio-cultural approaches (used in this study)?
 
+**Sub-question 1 (RQ1):** What contradictions arose in this research’s evolving design process and how were they addressed in the resulting CGD&P pedagogy?
 
-1. What contradictions arose in participation in this research’s CGD&P processes and how were they addressed?
+- **Sub-question 2 (RQ2):** How can the use of a collection of game design patterns support CGD&P, in particular in relation to abstract and concrete dimensions of existing pedagogies?
 
-2. How can the use of a collection of game design patterns support CGD&P, in particular in relation to abstract and concrete dimensions of existing pedagogies?
+- **Sub-question 3 (RQ3):** How can varied dimensions of agency be identified and nurtured in an evolving community of game makers?
 
-3. How can varied dimensions of agency be identified and nurtured in an evolving community of game makers? (and thus what subsequent implications does this have on understandings of pedagogy design)
-
-## Research Questions - March 2024
+<!-- ## Research Questions - March 2024
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
 2. How does CHAT theory help us understand how game design patterns x  can be used in an evolving community of novice game makers?
-3. How can learners build agency in an evolving community of game makers?
+3. How can learners build agency in an evolving community of game makers? -->
 
 
 
@@ -137,7 +136,11 @@ INSERT SUMMARY TABLE HERE (From start of Vignettes document)
 
 Table 6.1: Summary of varied GDP use within the activity of this research
 
-The above table summarises the principal different uses of GDPs in the data analysed.  In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
+The above table summarises the principal different uses of GDPs in the data analysed.  In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections.
+
+INCLUDE A MERGED DIAGRAM IF THIS IS REALLY HELPFUL BELOW.
+
+An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
 
 <!--
 _extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_ -->
@@ -222,14 +225,16 @@ THIS NEEDS REWRITING - THERE IS PERSONAL APPROPRIATION - BUT NOT NECESSARILY ALI
 <!-- As such, the design of this study does not fully address the exploration of the personal appropriation plane of activity.  -->
 
 <!-- In a classroom setting, group activity would likely incorporate a structural motivation to understand and utilise knowledge related to computational thinking concepts or similar curricular content.   -->
+Rogoff's interpretation of personal appropriation is complex communicating the bi-directional nature of the process where individual interpretations of community gained knowledge is remediated and fed back into the community. To avoid duplication with community processes and given the overall focus on social and cultural domains in thesis given the deficit in this aspect compared to studies exploring , this section follows the framing of Kafai and Burke's [-@kafai_constructionist_2015, p.4] review of CGD&P  as "knowledge appropriation and transformation that is instantiated in the process of making games". While in this informal learning context, the overall motivation of participant had a greater alignment with making an engaging game compared to learning knowledge within the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts.
 
+Kafai and Burke's review [-@kafai_constructionist_2015] in its identification of the greater number of studies focus on personal dimensions of learning programming and curricular knowledge compared to the deficit regarding social and cultural aspects, justifies my approach of explore this dimension in less depth. I focus on a limited aspect of personal appropriation in this section to observable novel skills: namely the code patching, debugging and the development of digital literacy skills.
+WHY THIS?
 
-As outlined in Chapter 2, there is a deficit in existing research on digital coding and game making on  areas of the social and cultural aspects of the coding process of novices compared to a greater focus on curricular knowledge and related skills developed by participants [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. In this informal learning context, the overall motivation of participant had a greater alignment with making an engaging game compared to learning knowledge within the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts.
-
+<!-- Specifically there was no testing involved and the interview focus was on socio-cultural aspects.  -->
 
 <!-- In P4 aGiven the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills,  -->
 
-As I began to review video data, I mapped curriculum-oriented concepts that emerged in the game making process of this research. To do this I drew on the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. This process resulted in a learning map of curricular concepts included here as Table 6.x.
+I am inspired by the the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work to create a map of learning dimensions to a seemingly chaotic tinkering and making process in museum contexts. As such, during early data analysis, with the potential to adapt this learning design to a more formal environment in mind, I mapped out curriculum-oriented concepts that suited exploration via  in the game making process of this research. This process resulted in a learning map of curricular concepts included here as Table 6.x. For brief definitions of these terms see the Glossary of this thesis.
 
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
@@ -237,7 +242,7 @@ As I began to review video data, I mapped curriculum-oriented concepts that emer
 | Sequences | Systems Elements      | Goal Setting        |
 | Variables      | Systems Dynamics  | Being Incremental and Iterative       |
 | Logic | Reinforcing Feedback Loops      | Developing Vocabulary        |
-| Loops | Balancing Feedback Loops      | Web Navigation    |
+| Loops | Balancing Feedback Loops      | Web Literacy    |
 | Arrays |       | Problem Solving        |
 | Creating Functions |       | Version Control    |
 | Change Listener |    | Debugging   |
@@ -273,7 +278,7 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 
 While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community.
 
-Given the overall focus on  social and cultural domains in thesis, there are the limitations in this the methodology of this research to assess personal appropriate. Specifically there was no testing involved and the interview focus was on socio-cultural aspects. Given this, I focus limited  aspect of personal appropriation in this section to observable novel skills: namely the code patching, debugging and the development of digital literacy skills.
+
 
 **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
 
@@ -776,8 +781,6 @@ This discussion section discusses the complexity of the exanded object of activi
 
 ### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
 
-
-
 This chapter has also addressed the complexity of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter.
 
 As such a fuller table summarises interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
@@ -809,12 +812,14 @@ At the larger scale, (see Figure.5.x) the activity system of games code and proc
 Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&P in terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the diversity of motivational aspects and resulting impact on diverse goal formation ( & flexible design practices) present in the findings of this chapter.
 
 One of these motivational factors is remaining engaged or in flow.
-Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. The experience of flow is also a componed of the concept of fluency in technology use explored in Chapter 2  in varied forms within constructionist research, technological, digital and computation. The guiding priciple being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
+Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. The experience of flow is also a component of the concept of fluency in technology use explored in Chapter 2 in varied forms within constructionist research, technological, digital and computation. The guiding principle being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
 
 <!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
 **Fluency and fluidity in practice**
 
-Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Above Toby's increased navigational proficiency was interpreted as  transformation of actions into more fluent operations [@leontiev_activity_2009].
+
+Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
 
 In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow [@basawapatna_zones_2013], with reponsive just in time documentation aligned with participants goal shown to be more engaging than principles based instruction. This research extends this technique by adding greater specificity in detail of use of patterns and most importantly choice of which patterns participants implement. The user-led process can be examined increased the experience of flow through possibilities for social identity development [@mao_optimal_2016].
 
