--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -8,7 +8,7 @@ zotero:
 layout: post
 number-sections: true
 categories: chapter
-title: 5. Exploration of the Formative Learning Design Process
+title: 5. Findings: Design Narrative
 ---
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
@@ -67,8 +67,7 @@ title: 5. Exploration of the Formative Learning Design Process
             .tech](#removed-from-docs---add-to-appendix-.tech)
 
 
-# Exploration of the Formative Learning Design Process
-
+# Findings: Design Narrative
 
 ## Research Questions April 2025
 
