--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -8,7 +8,7 @@ zotero:
 layout: post
 number-sections: true
 categories: chapter
-title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
+title:  6. Findings: Game Design Patterns
 ---
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
@@ -78,7 +78,7 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         -   [Implications for practitioners - MOVE
             LATER?](#implications-for-practitioners---move-later)
 
-# The Use of Gameplay Design Patterns "It’s like a project in itself, really"
+# Findings: Game Design Patterns
 
 ## Research Questions April 2025
 
